--- a/src/main/resources/static/html/weeklyMenu.html
+++ b/src/main/resources/static/html/weeklyMenu.html
@@ -1,14 +1,17 @@
 <html>
 
-<head></head>
+<head>
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/weeklyMenu.css" />
+</head>
 
 <body>
 <div id="wrap">
 
     <ul class="week">
-        <li class="day">
+        <li class="day clearfix">
             <h3 class="date">12월 13일 일요일</h3>
-            <img>
+            <img class="menu_img">
             <ul class="menu">
                 <li class="submenu">밥</li>
                 <li class="submenu">국</li>
