--- a/src/main/resources/static/html/weeklyMenu.html
+++ b/src/main/resources/static/html/weeklyMenu.html
@@ -23,23 +23,23 @@
         <li>
             <h3>12월 13일 일요일</h3>
             <img>
-            <ul>
-                <li>밥</li>
-                <li>국</li>
-                <li>주반찬</li>
-                <li>부반찬</li>
+            <ul class="menu1">
+                <li class="submenu1">밥</li>
+                <li class="submenu1">국</li>
+                <li class="submenu1">주반찬</li>
+                <li class="submenu1">부반찬</li>
             </ul>
         </li>
 
         <li>
             <h3>12월 13일 일요일</h3>
             <img>
-            <ul>
-                <li>밥</li>
-                <li>국</li>
-                <li>주반찬</li>
-                <li>부반찬</li>
-            </ul>
+            <p class="aa1">
+                <span class="submenu1">밥</span>
+                <span class="submenu1">국</span>
+                <span class="submenu1">주반찬</span>
+                <span class="submenu1">부반찬</span>
+            </p>
         </li>
     </ul>
 
