--- a/src/main/resources/static/html/weeklyMenu.html
+++ b/src/main/resources/static/html/weeklyMenu.html
@@ -12,23 +12,28 @@
         <li class="day clearfix">
             <h3 class="date">12월 13일 일요일</h3>
             <img class="menu_img">
-            <ul class="menu">
-                <li class="submenu">밥</li>
-                <li class="submenu">국</li>
-                <li class="submenu">주반찬</li>
-                <li class="submenu">부반찬</li>
-            </ul>
+            <div class="menu-div">
+                <ul class="menu">
+                    <li class="submenu">밥</li>
+                    <li class="submenu">국</li>
+                    <li class="submenu">주반찬</li>
+                    <li class="submenu">부반찬</li>
+                </ul>
+            </div>
         </li>
 
-        <li>
-            <h3>12월 13일 일요일</h3>
-            <img>
-            <ul class="menu1">
-                <li class="submenu1">밥</li>
-                <li class="submenu1">국</li>
-                <li class="submenu1">주반찬</li>
-                <li class="submenu1">부반찬</li>
-            </ul>
+        <li class="day clearfix">
+            <h3 class="date">12월 13일 일요일</h3>
+            <img class="menu_img">
+            <div class="menu-div">
+                <ul class="menu">
+                    <li class="submenu">밥</li>
+                    <li class="submenu">국</li>
+                    <li class="submenu">주반찬</li>
+                    <li class="submenu">부반찬</li>
+                    <li class="submenu">부반찬</li>
+                </ul>
+            </div>
         </li>
 
         <li>
