--- a/src/main/resources/static/html/communityPage.html
+++ b/src/main/resources/static/html/communityPage.html
@@ -32,6 +32,46 @@
             <div class="user_content">
                 글 내용
             </div>
+
+            <div class="comment_list">
+                <div class="comment">
+                    <ul class="list_comment">
+                        <li class="comm">댓글</li>
+                        <li id="_cmt-718843-60" class="comm" data-seq="60" data-parseq="0" data-is-hidden="false" data-nickname="2021취뽀" data-image-url="" data-image-name="" data-image-size="0"  data-is-emoticon="false"">
+                            <div class="comment_section">
+                                <div class="profile_thumb">
+                                    <img src="//img1.daumcdn.net/thumb/C72x72/?fname=http://i1.daumcdn.net/cafeimg/img_profile/profile_kero.png" alt="" width="36" height="36" class="img_thumb">
+                                </div>
+                                <div class="comment_info">
+                                    <div class="comment_post">
+                                        <div class="profile_info">
+                                            <div class="opt_more_g"><!-- 닉네임 클릭시 open_layer 추가 -->
+                                                <img class="ico_role" src="//t1.daumcdn.net/cafe_image/cf_img2/bbs2/roleicon/2/c_level_25.gif"/>
+                                                <a href="javascript:" data-grpid="11PG2" data-rolecode="27" data-nickname="2021\uCDE8\uBF40" data-is-mine="false" data-enc-userid="XVHYyF8lKSU0" class="txt_name">2021취뽀</a>
+                                            </div>
+                                            <span class="txt_date">19:17</span>
+                                        </div>
+                                        <div class="box_post">
+                                            <p class="desc_info">
+                                                <span class="original_comment">너무 귀야워ㅠㅠㅠㅠㅠㅠ</span>
+                                            </p>
+                                            
+                                        </div>
+                                        <div id="_cmt_button-718843-60" class="comment_more">
+                                            <a href="javascript:" class="link_write">답글</a>
+                                            <div class="opt_more_g">
+                                                <button type="button" class="btn_g_ico btn_more_menu" data-target-element-id="_cmt-718843-60" data-modifiable="false" data-removable="false" data-reportable="true" data-content-type="COMMENT">
+                                                    <span class="ico_bbs ico_more">기능 더보기</span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
